@@ -1,5 +1,7 @@
 22 May 2008: Wouter
 	- contrib unbound.spec from Patrick Vande Walle.
+	- fixup bug#175: call tzset before chroot to have correct timestamps
+	  in system log.
 
 19 May 2008: Wouter
 	- fedora 9, check in6_pktinfo define in configure.
